@@ -30,9 +30,6 @@
     {%- endfor %}
 {%- endmacro -%}
 
-{% if (provides(byline, 'zeit.web.core.byline.IContentByline')
-       or provides(byline, 'zeit.web.core.byline.ITeaserByline')) %}
-    {%- for type, obj in byline -%}
-        {{ type | macro(obj) }}
-    {%- endfor %}
-{% endif %}
+{%- for type, obj in byline -%}
+    {{ type | macro(obj) }}
+{%- endfor %}
