@@ -12,6 +12,8 @@ Change log for zeit.web
 
 - ZON-2428: Remove "ZEIT ONLINE" from social media meta titles
 
+- FIX: Display bylines on ranking area teasers
+
 - MAINT: Fix asset_host etc to allow mounting under an URL prefix (for showcases)
 
 - MAINT: Adjust templates to allow mounting under an URL prefix (for showcases)
